Add navigation bar, styled header text

--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Stockholm Social Wine Club</h1>
-    </header> 
+        <!-- Image taken from https://images.unsplash.com/photo-1495929427389-a6451f2e01fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80 -->
+        <div class="header-image">
+            <div class="header-text">
+                <h1>Stockholm Social Wine Club</h1>
+            </div>
+        </div>
+    </header>
+
+    <!-- Navigation bar -->
+    <nav id="nav">
+        <ul>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#signup">Sign Up</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
 
     <!-- Main -->
     <main>
+
  
 
     </main>
