Changed class and id attribute to header

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <!-- Image taken from https://images.unsplash.com/photo-1495929427389-a6451f2e01fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80 -->
-        <div class="header-image">
-            <div class="header-text">
+    <header class="text-center page-header" id="home">
+        <div class="vertical-center">
                 <h1>Stockholm Social Wine Club</h1>
             </div>
         </div>
     </header>
 
     <!-- Navigation bar -->
-    <nav id="nav">
+    <nav id="navbar">
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#signup">Sign Up</a></li>
@@ -32,10 +30,17 @@
         </ul>
     </nav>
 
-
     <!-- Main -->
     <main>
-
+        <div>
+            <h1> Welcome to Stockholm Social Wine Club</h1>
+            <p>Indulge in the Art of Wine with Us
+            
+            Uncork the possibilities and savor the journey into the world of exquisite wines. At Stockholm Social Wine Club, we are more than
+            just a club; we are a community of passionate individuals brought together by a shared love for the finer things in
+            life. Whether you're a seasoned connoisseur or just beginning your adventure into the realm of wines, our club is your
+            passport to an extraordinary vinous experience.</p>
+        </div>
  
 
     </main>
