Add style to navbar

--- a/index.html
+++ b/index.html
@@ -22,27 +22,24 @@
     </header>
 
     <!-- Navigation bar -->
-    <nav id="navbar">
-        <ul>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#signup">Sign Up</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+    <nav class="black-background text-center text-uppercase flexbox">
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#signup">Sign Up</a>
+        <a href="#contact">Contact</a>
     </nav>
 
     <!-- Main -->
     <main>
-        <div>
-            <h1> Welcome to Stockholm Social Wine Club</h1>
-            <p>Indulge in the Art of Wine with Us
+            <div>
+                <h1> Welcome to Stockholm Social Wine Club</h1>
+                <p>Indulge in the Art of Wine with Us
             
-            Uncork the possibilities and savor the journey into the world of exquisite wines. At Stockholm Social Wine Club, we are more than
-            just a club; we are a community of passionate individuals brought together by a shared love for the finer things in
-            life. Whether you're a seasoned connoisseur or just beginning your adventure into the realm of wines, our club is your
-            passport to an extraordinary vinous experience.</p>
-        </div>
- 
-
+                Uncork the possibilities and savor the journey into the world of exquisite wines. At Stockholm Social Wine Club, we are more than
+                just a club; we are a community of passionate individuals brought together by a shared love for the finer things in
+                life. Whether you're a seasoned connoisseur or just beginning your adventure into the realm of wines, our club is your
+                passport to an extraordinary vinous experience.</p>
+            </div>
     </main>
 
     <!-- Footer -->
