added content and add style to content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center page-header" id="home">
+    <header class="text-center page-header" id="header">
         <div class="vertical-center">
                 <h1>Stockholm Social Wine Club</h1>
             </div>
@@ -31,15 +31,38 @@
 
     <!-- Main -->
     <main>
+        <section id="home">
+            <div class="text-white bg-black">
             <div>
-                <h2> Welcome to Stockholm Social Wine Club</h2>
+                <h2>Welcome to Stockholm Social Wine Club</h2>
+                <br>
                 <p>Indulge in the Art of Wine with Us
-            
                 Uncork the possibilities and savor the journey into the world of exquisite wines. At Stockholm Social Wine Club, we are more than
                 just a club; we are a community of passionate individuals brought together by a shared love for the finer things in
                 life. Whether you're a seasoned connoisseur or just beginning your adventure into the realm of wines, our club is your
                 passport to an extraordinary vinous experience.</p>
             </div>
+        </section>
+
+        <!-- About us -->
+        <section id="about">
+            <div>
+                <h2>About Us</h2>
+                <br>
+                <p></p>
+            </div>
+
+        </section>
+
+        <!-- Sign Up -->
+        <section id="signup">
+            
+        </section>
+
+        <section id="contact">
+
+        </section>
+
     </main>
 
     <!-- Footer -->
