add style to all sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="home">
             <div class="text-white bg-black">
             <div>
-                <h2>Welcome to Stockholm Social Wine Club</h2>
+                <h2 class="ul">Welcome to Stockholm Social Wine Club</h2>
                 <br>
                 <p>Indulge in the Art of Wine with Us
                 Uncork the possibilities and savor the journey into the world of exquisite wines. At Stockholm Social Wine Club, we are more than
@@ -44,9 +44,10 @@
         </section>
 
         <!-- About us -->
-        <section id="about">
-            <div>
-                <h2>About Us</h2>
+        <section id="home">
+            <div id="about" class="text-white bg-black">
+                <div>
+                <h2 class="ul">About Us</h2>
                 <br>
                 <p>Embark on a worldwide exploration of flavors without leaving the comfort of your home. Each month, our curated selection
                 transports you to renowned vineyards, introducing you to unique varietals, exceptional vintages, and the stories behind
@@ -109,23 +110,22 @@
         </section>
 
         <!-- Sign Up -->
-        <section id="signup">
-            <div>
-                <h2>Join Us on This Vinous Adventure</h2>
+        <section id="home">
+            <div id="signup" class="text-white bg-black">
+                <h2 class="ul">Sign Up Now!</h2>
                 <br>
-                <h2>Now only: 100€/month</h2>
+                <h2 class="ul">Now only: 100€/month</h2>
                 <br>
-                <h2>Sign Up Now!</h2>
             </div>
         </section>
 
-        <section id="contact">
-            <div>
-                <h3>Contact us!</h3>
+        <section id="home">
+            <div id="contact" class="text-white bg-black">
+                <h2>Contact us!</h2>
                 <br>
-                <h4>Got any questions? Get in touch!</h4>
+                <h3>Got any questions? Get in touch!</h3>
                 <br>
-                <h4>+46 123 456 789 | info@sthlmsocialwineclub.se</h4>
+                <h3>+46 123 456 789 | info@sthlmsocialwineclub.se</h3>
             </div>
 
         </section>
